// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshop of tagWithoutMedia 1`] = `
<section
  className="ProductGridHero-heroGridContainer-2"
>
  <div
    className="MuiGrid-container-3 MuiGrid-spacing-xs-24-26"
  >
    <div
      className="MuiGrid-item-4 MuiGrid-grid-xs-12-41"
    />
  </div>
</section>
`;

exports[`snapshot of tagWithMedia 1`] = `
<section
  className="ProductGridHero-heroGridContainer-2"
>
  <div
    className="MuiGrid-container-3 MuiGrid-spacing-xs-24-26"
  >
    <div
      className="MuiGrid-item-4 MuiGrid-grid-xs-12-41"
    >
      <div
        className="Img-imgWrapper-94 Img-imgHeroWrapper-95"
      >
        <img
          alt=""
          className="Img-img-96 Img-imgLoading-98 "
          src=""
        />
      </div>
    </div>
  </div>
</section>
`;
